# QC-Dashboard

./: .gitignore  README.md  main.py  pyproject.toml
pages/: 1-تماس ها.py  2-ورود و خروج.py  3-نظرسنجی ها.py  3_نظرسنجی ها.py  4-میس کال ها.py
utils/: auth.py  customCss.py  dataPreprocess.py  logger.py  sheetConnect.py  sidebar.py  voipConnect.py
